<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/orange"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/priceEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="20"
        android:ems="10"
        android:layout_columnSpan="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/priceTextView"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_total_price"
        android:layout_gravity="fill_horizontal"
        android:background="@color/price_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/paymentEditText"
        android:layout_column="0"
        android:digits="0123456789"
        android:maxLength="20"
        android:ems="10"
        android:layout_columnSpan="2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/paymentTextView"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/enter_down_payment"
        android:layout_gravity="fill_horizontal"
        android:background="@color/payment_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/interestEditText"
        android:layout_column="0"
        android:digits=".0123456789"
        android:maxLength="5"
        android:ems="10"
        android:layout_columnSpan="2"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/interestTextView"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:hint="@string/interest_TextView"
        android:layout_gravity="fill_horizontal"
        android:background="@color/payment_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <TextView
        android:id="@+id/monthlyTextView"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/elevation"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:maxLines="6"
        android:singleLine="false"
        android:lines="6"
        android:padding="@dimen/textview_padding"
        android:text="@string/default_results"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/years"
        android:textColor="#FAFAFA"
        android:textStyle="bold"
        android:elevation="@dimen/elevation"
        android:id="@+id/yearsSeekBarTextView"
       />

    <SeekBar
        android:layout_width="@dimen/seekbar_width"
        android:layout_height="@dimen/seekbar_height"
        android:id="@+id/yearsSeekBar"
        android:indeterminate="false"
        android:elevation="@dimen/elevation"
        android:theme="@style/SeekBarColor"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FAFAFA"
        android:text="@string/loan"
        android:textStyle="bold"
        android:elevation="@dimen/elevation"
        android:id="@+id/loanLabelTextView"
        android:layout_gravity="end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/loanTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <TextView
        android:id="@+id/totalLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:elevation="@dimen/elevation"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FAFAFA"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/totalTextView"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>


    <TextView
        android:id="@+id/monthlyPaymentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:elevation="@dimen/elevation"
        android:text="@string/monthly_payment"
        android:textColor="#FAFAFA"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/monthlyPaymentBoxTextView"
        android:layout_gravity="fill_horizontal|end"
        android:background="@color/result_background"
        android:gravity="center"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

</GridLayout>
